--- a/code/Ipdb.Lib/Ipdb.Lib.csproj
+++ b/code/Ipdb.Lib/Ipdb.Lib.csproj
@@ -8,4 +8,8 @@
     <Version>0.0.1.0</Version>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
