--- a/code/Ipdb.Lib/Ipdb.Lib.csproj
+++ b/code/Ipdb.Lib/Ipdb.Lib.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Indexing\" />
+    <Folder Include="Document\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
