--- a/code/Ipdb.Lib/Ipdb.Lib.csproj
+++ b/code/Ipdb.Lib/Ipdb.Lib.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <WarningLevel>9999</WarningLevel>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <Version>0.0.1.0</Version>
   </PropertyGroup>
 
