--- a/code/Ipdb.Tests/Ipdb.Tests.csproj
+++ b/code/Ipdb.Tests/Ipdb.Tests.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <WarningLevel>9999</WarningLevel>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
