--- a/code/Ipdb.Tests2/Ipdb.Tests2.csproj
+++ b/code/Ipdb.Tests2/Ipdb.Tests2.csproj
@@ -7,6 +7,7 @@
     <WarningLevel>9999</WarningLevel>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <IsPackable>false</IsPackable>
+    <RunSettingsFilePath>$(MSBuildProjectDirectory)\Test.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
   <ItemGroup>
