--- a/code/Ipdb.Tests2/Ipdb.Tests2.csproj
+++ b/code/Ipdb.Tests2/Ipdb.Tests2.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Ipdb.Lib2\Ipdb.Lib2.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Codecs\" />
+  </ItemGroup>
+
 </Project>
