--- a/code/TrackDb.Lib/TrackDb.Lib.csproj
+++ b/code/TrackDb.Lib/TrackDb.Lib.csproj
@@ -10,7 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Settings\" />
+    <Compile Remove="Settings\**" />
+    <EmbeddedResource Remove="Settings\**" />
+    <None Remove="Settings\**" />
   </ItemGroup>
 
 </Project>
