--- a/.github/workflows/nuget-push.yaml
+++ b/.github/workflows/nuget-push.yaml
@@ -22,6 +22,8 @@ jobs:
     - name: Install dependencies
       run: dotnet restore code
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-build
+    - name: Patch version
+      run: python3 deployment/patch-version.py code/TrackDb.Lib/TrackDb.Lib.csproj ${{ github.run_number }} ${{ github.event.inputs.alpha }}
     - name: Build
       run: dotnet build code/ --configuration Release --no-restore
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-nuget-push
