--- a/code/TrackDb.Lib/TrackDb.Lib.csproj
+++ b/code/TrackDb.Lib/TrackDb.Lib.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Storage.Files.DataLake" Version="12.23.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.3" />
   </ItemGroup>
 
 </Project>
