--- a/code/TrackDb.Lib/TrackDb.Lib.csproj
+++ b/code/TrackDb.Lib/TrackDb.Lib.csproj
@@ -43,6 +43,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Storage.Files.DataLake" Version="12.25.0" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.3" />
 		<PackageReference Include="Polly" Version="8.6.5" />
 	</ItemGroup>
 
