--- a/code/TrackDb.Lib/TrackDb.Lib.csproj
+++ b/code/TrackDb.Lib/TrackDb.Lib.csproj
@@ -43,8 +43,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="Azure.Storage.Files.DataLake" Version="12.25.0" />
-		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.3" />
 		<PackageReference Include="Polly" Version="8.6.5" />
+		<PackageReference Include="ZiggyCreatures.FusionCache" Version="2.5.0" />
 	</ItemGroup>
 
 </Project>
